My nineh commit on git hub

--- a/public/theory.html
+++ b/public/theory.html
@@ -33,6 +33,23 @@ npm start
 cd demo
 
 npm start
+
+
+version update krne ke liye   =>   npm install react-router-dom@6.20.1 
+
+
+Git commond  
+
+
+1  =>   git status
+
+2 =>   git add
+
+3  =>  git commit -m "my-fourth"
+
+
+4  =>  git push 
+
     
 </body>
 </html>
